syntax = "proto3";

package app.homepb;

service Gid{
    rpc Ping(PingRequest)returns (PingReply);
    rpc GetId(IdRequest)returns (IdReply);
    rpc GetSnowId(SnowIdRequest)returns (SnowIdReply);
}

message Status {
    int32  code = 1; //自定义错误码
    string msg = 2; //错误信息(只有code不等于200的时候返回)
}

message PingRequest{

}

message PingReply{
    Status status = 1;
    string data = 2;
}

message IdRequest {
    string tag = 1;
}

message IdReply{
    Status status = 1;
    int64  id = 2;
}

message SnowIdRequest {
    string tag = 1;
}

message SnowIdReply{
    Status status = 1;
    int64  id = 2;
}
